# jox

./: .gitignore  README.md  pyproject.toml
data/: entries.json  outcomes.json
docs/: ARCHITECTURE.md  MCP_LINKEDIN_NOTES.md  SECURITY.md  cheatsheet.md
jox/: cli.py  settings.py
jox/ai_guard/: evaluator.py  optimizer.py
jox/cv/: parse.py  render.py
jox/guards/: net_allowlist.py  telemetry_block.py
jox/llm/: openai_client.py  prompts.py
jox/mcp/: runtime.py  tool_adapters.py
jox/mcp/servers/ai_textscan_mcp_server/: __init__.py  cli_main.py  detector.py  server.py  text_extract.py
jox/mcp/servers/indeed_mcp_server/: __init__.py  http.py  parser.py  tools.py
jox/mcp/servers/jobs_mcp_server/: __init__.py  driver.py  tools.py
jox/mcp/servers/jobup_mcp_server/: __init__.py  driver.py  tools.py
jox/mcp/servers/linkedin_mcp_server/: __init__.py  __main__.py  (+8 more)
jox/orchestrator/: agent.py  memory.py  report.py  scoring.py
jox/quality/: ai_likeness_client.py
jox/utils/: dates.py  files.py  logging.py
jox/workflows/: optimize_ai_likeness.py  quick_and_ready.py
outputs/reports/: session_report_2025-09-30.json  session_report_2025-10-01.json  session_report_2025-10-02.json  session_report_2025-10-03.json  session_report_2025-10-04.json  session_report_2025-10-05.json  session_report_2025-10-24.json  session_report_2025-10-25.json  session_report_2025-10-26.json  session_report_2025-10-27.json
scripts/: dev_setup.sh  get_li_at.py  lint.sh  run_quick_and_ready.sh
tests/: test_cli.py  test_mcp_runtime.py  test_memory.py  test_render.py  test_scoring.py
(+16 files in other folders)
