[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jox"
version = "0.1.0"
description = "JOX – Local, agentic job-search assistant with MCP subagents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
  "langchain>=0.2.14",
  "langchain-openai>=0.1.22",
  "openai>=1.47.0",
  "pydantic>=2.8.2",
  "typer>=0.12.3",
  "rich>=13.8.0",
  "python-dotenv>=1.0.1",
  "pdfminer.six>=20240706",
  "python-docx>=1.1.2",
  "reportlab>=4.2.2",
  "weasyprint>=62.3; platform_system != 'Windows'",
  "fastmcp>=0.1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "ruff>=0.6.9", "mypy>=1.11.2"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["jox*"]
exclude = ["tests*", "outputs*", "data*", "docs*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
